--- a/MediaQuotes/app/src/main/res/layout/activity_output.xml
+++ b/MediaQuotes/app/src/main/res/layout/activity_output.xml
@@ -7,4 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".OutputActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/quoteList"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
