Resolve merge conflicts

--- a/MediaQuotes/app/src/main/res/layout/activity_main.xml
+++ b/MediaQuotes/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Please input a word/phrase you want to look for:"
+        android:text="@string/input"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
