--- a/MediaQuotes/app/src/main/res/layout/activity_main.xml
+++ b/MediaQuotes/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/inputField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
