--- a/MediaQuotes/app/src/main/res/layout/quote_item.xml
+++ b/MediaQuotes/app/src/main/res/layout/quote_item.xml
@@ -14,4 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/characterView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/mediaView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
