--- a/MediaQuotes/app/src/main/res/layout/quote_item.xml
+++ b/MediaQuotes/app/src/main/res/layout/quote_item.xml
@@ -12,7 +12,8 @@
     <TextView
         android:id="@+id/quoteView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/characterView"
